css/css.css
*,
*:before,
*:after{
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	box-sizing: border-box;
}

.clearfix{
	display:table;
	content: "";
	clear: both;
}
html{
	font-size: 75.0%;
}

.home{
	background: url('../img/bg-leaves-lowest.jpg') center center fixed no-repeat #00ffff;
	background-size: cover;
	font-family: 'Raleway', sans-serif;
	font-weight: 500;
	font-size: 1.4em;
}
/*centering*/
.container{
	width: 960px;
	margin: 0px auto;
}
/*inside cnetering*/
.centerme{
	text-align: center;
}
.box{
	color: rgba(167, 163, 126, 1);
	border: solid;
	background: rgba(255, 255, 255, .8);
	padding: 10px;
	/*top bottom left right, symmetrical, so also top and bottotm, 
	left and right if 2 values, all 4 if one value */
	margin-bottom: 10px;
	/*curves borders*/
	-webkit-border-radius: 15px;
	border-radius: 15px;
	/*adds black shadow to borders*/
	-webkit-box-shadow: 3px 3px 3px 3px rgba(0,0,0,.9);
	box-shadow: 3px 3px 3px 3px rgba(0,0,0,.9);
}

.lineheight{
	line-height: 150%;
}

.floatleft{
	float:left;
}

.floatright{
	float: right;
}

.leftconst{
	width: 600px;
}

.rightconst{
	width: 310px;
}

.hide{
	display: none;
}

h1 {
	font-family: 'Lobster', cursive;
	font-size: 2.6em;
	font-weight: normal;
	color: rgba(4, 99, 128, 1);
}

.redtext{
	color: rgba(0, 47, 47 1);
}
.lobster{
	font-family: 'Lobster', cursive;
	font-size: 1.8em;
	font-weight: normal;
}

a{
	font-family: 'Courier New', monospace;
	font-size: 1.3em;
	text-decoration: none;
	word-spacing: -.3em
}

nav ul{
	margin-left: -40px;
}

nav ul li{
	list-style-type: none;
	display: inline;
	margin-right: 35px;
}

ul li{
	list-style-type: none;
	margin-right: 35px;
}

a:link, a:visited{
	color: rgba(167, 163, 126, 1);

}

a:hover, a:active{
	background: rgba(0, 47, 47, 1);
	color: #EFECCA;
}

